fix overflow:scroll by overflow:auto

--- a/week-10/FoxPlayer/assets/css/main.css
+++ b/week-10/FoxPlayer/assets/css/main.css
@@ -45,7 +45,7 @@ header img {
   margin-top: 10px;
   color: red;
   max-height: 65px;
-  overflow: scroll;
+  overflow: auto;
 }
 
 header .add-to-playlist{
@@ -137,7 +137,7 @@ header .add-to-playlist p {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  overflow: scroll;
+  overflow: auto;
 }
 
 .playlist-item{
@@ -164,12 +164,8 @@ header .add-to-playlist p {
 }
 
 .default {
-  font-weight: bolder;
-}
-
-.all > *,
-.favourites > * {
-  pointer-events: none;
+  font-weight: 700;
+  font-family: 'Roboto Slab', serif;
 }
 
 .playlist-item:nth-child(odd){
@@ -214,7 +210,7 @@ header .add-to-playlist p {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  overflow: scroll;
+  overflow: auto;
 }
 
 .track-item{
